--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
     "lucide-react": "^0.561.0",
     "motion": "^12.23.26",
+    "nanoid": "^5.1.6",
     "next": "16.0.10",
     "pg": "^8.16.3",
     "prisma": "^7.2.0",
